2013-08-28  Mark Wielaard  <mjw@redhat.com>

	* addrcfi.c (handle_cfi): Use printf not error.
	* run-addrcfi.sh: Add case for EM_PPC and EM_PPC64.
	* testfileppc32.bz2: New testfile.
	* testfileppc64.bz2: Likewise.
	* Makefile.am (EXTRA_DIST): Add testfileppc32.bz2 and
	testfileppc64.bz2.

2013-08-27  Mark Wielaard  <mjw@redhat.com>

	* run-addrcfi.sh: New test.
	* Makefile.am (TESTS): Add run-addrcfi.sh.
	(EXTRA_DIST): Likewise.
	* addrcfi.c (op_name): New function.
	(print_detail): Call and print op_name. Check ops, not result
	to check if this is "same value" or "undefined".
	(handle_cfi): Make sure cfa_ops doesn't point to NULL.

2013-08-13  Mark Wielaard  <mjw@redhat.com>

	* run-addr2line-i-test.sh: New test.
	* testfile-inlines.bz2: New testfile.
	* Makefile.am (EXTRA_DIST): Add run-addr2line-i-test.sh and
	testfile-inlines.bz2.
	(TESTS): Add run-addr2line-i-test.sh.

2013-08-12  Mark Wielaard  <mjw@redhat.com>

	* run-addr2line-test.sh: New test.
	* Makefile.am (EXTRA_DIST): Add run-addr2line-test.sh.
	(TESTS): Likewise.

2013-07-23  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* run-unstrip-n.sh (test-core.*): Ignore libc.so.6 entry and order of
	the entries.

2013-07-02  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (EXTRA_DIST): Fix typo, forgot extension in
	testfilenolines.bz2.

2013-05-30  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* Makefile.am (EXTRA_DIST): Add test-core-lib.so.bz2,
	test-core.core.bz2 and test-core.exec.bz2.
	* run-addrname-test.sh: New test for these files.
	* run-unstrip-n.sh: Update expected output.  New test for these files.
	* test-core-lib.so.bz2: New file.
	* test-core.core.bz2: New file.
	* test-core.exec.bz2: New file.

2013-05-03  Mark Wielaard  <mjw@redhat.com>

	* testfilenolines.bz2: New test file.
	* Makefile.am (EXTRA_DIST): Add testfilenolines.bz2.
	* run-get-lines.sh: Run testrun_compare on testfilenolines.

2013-04-30  Jan Kratochvil  <jan.kratochvil@redhat.com>
